--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       <!-- Loads the specified .html file -->
       <load src="./partials/vite-promo.html" />
       <!-- <load src="./partials/badges.html" /> -->
+      <a class="nav-link {=$highlight-act}" href="./1-timer.html">1-timer</a>
+      <a class="nav-link {=$highlight-curr}" href="./2-snackbar.html">2-snackbar</a>
     </main>
 
     <!-- <load src="./partials/footer.html" /> -->
